Upload image , Register and Login done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,4 +12,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_below="@id/event_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btnUploadMain"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="bottom"
+            android:text="Upload" />
+
+        <Button
+            android:id="@+id/btnLoginMain"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:layout_toEndOf="@+id/btnUploadMain"
+            android:layout_toRightOf="@+id/btnUploadMain"
+            android:text="Login" />
+
+        <Button
+            android:id="@+id/btnRegisterMain"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:layout_toEndOf="@+id/btnLoginMain"
+            android:layout_toRightOf="@+id/btnLoginMain"
+            android:text="Register" />
+    </RelativeLayout>
+
+</RelativeLayout>
