--- a/app/src/main/res/layout/activity_insert.xml
+++ b/app/src/main/res/layout/activity_insert.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.szekcsbobo.sapientiaevent.InsertActivity">
+    tools:context="insert.InsertActivity">
 
 
     <TextView
