--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:weightSum="2"
-    tools:context="com.example.szekcsbobo.sapientiaevent.UploadActivity">
+    tools:context="insert.UploadActivity">
 
     <LinearLayout
         android:id="@+id/layout_button"
